crates/fig-parser/tests/snapshots/integration_tests__structs__generic_multiple.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Pair
      generic_params:
        - Type:
            name: A
            bounds: []
            default_type: ~
        - Type:
            name: B
            bounds: []
            default_type: ~
      requires: []
      fields:
        - name: first
          ty:
            Path:
              path:
                segments:
                  - A
              generic_args: []
          visibility: Default
          annotations: []
        - name: second
          ty:
            Path:
              path:
                segments:
                  - B
              generic_args: []
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Triple
      generic_params:
        - Type:
            name: A
            bounds: []
            default_type: ~
        - Type:
            name: B
            bounds: []
            default_type: ~
        - Type:
            name: C
            bounds: []
            default_type: ~
      requires: []
      fields:
        - name: a
          ty:
            Path:
              path:
                segments:
                  - A
              generic_args: []
          visibility: Default
          annotations: []
        - name: b
          ty:
            Path:
              path:
                segments:
                  - B
              generic_args: []
          visibility: Default
          annotations: []
        - name: c
          ty:
            Path:
              path:
                segments:
                  - C
              generic_args: []
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Map
      generic_params:
        - Type:
            name: K
            bounds: []
            default_type: ~
        - Type:
            name: V
            bounds: []
            default_type: ~
      requires: []
      fields:
        - name: key
          ty:
            Path:
              path:
                segments:
                  - K
              generic_args: []
          visibility: Default
          annotations: []
        - name: value
          ty:
            Path:
              path:
                segments:
                  - V
              generic_args: []
          visibility: Default
          annotations: []
        - name: next
          ty:
            Nullable:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Map
                    generic_args:
                      - Path:
                          path:
                            segments:
                              - K
                          generic_args: []
                      - Path:
                          path:
                            segments:
                              - V
                          generic_args: []
          visibility: Default
          annotations: []
