crates/fig-parser/tests/snapshots/integration_tests__structs__generic_single.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Box
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires: []
      fields:
        - name: value
          ty:
            Path:
              path:
                segments:
                  - T
              generic_args: []
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Pair
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires: []
      fields:
        - name: first
          ty:
            Path:
              path:
                segments:
                  - T
              generic_args: []
          visibility: Default
          annotations: []
        - name: second
          ty:
            Path:
              path:
                segments:
                  - T
              generic_args: []
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Optional
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires: []
      fields:
        - name: has_value
          ty: Bool
          visibility: Default
          annotations: []
        - name: value
          ty:
            Path:
              path:
                segments:
                  - T
              generic_args: []
          visibility: Default
          annotations: []
