crates/fig-parser/tests/snapshots/integration_tests__structs__pointer_fields.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Node
      generic_params: []
      requires: []
      fields:
        - name: data
          ty: I32
          visibility: Default
          annotations: []
        - name: next
          ty:
            Pointer:
              nullable: false
              mutable: true
              element_type:
                Path:
                  path:
                    segments:
                      - Node
                  generic_args: []
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Tree
      generic_params: []
      requires: []
      fields:
        - name: value
          ty: I32
          visibility: Default
          annotations: []
        - name: left
          ty:
            Nullable:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Tree
                    generic_args: []
          visibility: Default
          annotations: []
        - name: right
          ty:
            Nullable:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Tree
                    generic_args: []
          visibility: Default
          annotations: []
