crates/fig-parser/tests/snapshots/integration_tests__structs__requires_and_where.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Vector
      generic_params:
        - Type:
            name: T
            bounds:
              - Path:
                  path:
                    segments:
                      - Numeric
                  generic_args: []
              - Path:
                  path:
                    segments:
                      - Sized
                  generic_args: []
            default_type: ~
      requires:
        - Path:
            path:
              segments:
                - Display
            generic_args: []
        - Path:
            path:
              segments:
                - Debug
            generic_args: []
      fields:
        - name: data
          ty:
            Array:
              element_type:
                Path:
                  path:
                    segments:
                      - T
                  generic_args: []
              size: ~
          visibility: Default
          annotations: []
        - name: len
          ty: USize
          visibility: Default
          annotations: []
        - name: cap
          ty: USize
          visibility: Default
          annotations: []
