crates/fig-parser/tests/snapshots/integration_tests__structs__single_field.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Wrapper
      generic_params: []
      requires: []
      fields:
        - name: value
          ty: I32
          visibility: Default
          annotations: []
