crates/fig-parser/tests/snapshots/integration_tests__structs__slice_fields.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Buffer
      generic_params: []
      requires: []
      fields:
        - name: data
          ty:
            Array:
              element_type: U8
              size: ~
          visibility: Default
          annotations: []
        - name: len
          ty: USize
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Matrix
      generic_params: []
      requires: []
      fields:
        - name: rows
          ty: USize
          visibility: Default
          annotations: []
        - name: cols
          ty: USize
          visibility: Default
          annotations: []
        - name: data
          ty:
            Array:
              element_type: F64
              size: ~
          visibility: Default
          annotations: []
