crates/fig-parser/tests/snapshots/integration_tests__structs__visibility.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Public
      annotations: []
      is_packed: false
      name:
        segments:
          - PublicPoint
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: F64
          visibility: Default
          annotations: []
        - name: y
          ty: F64
          visibility: Default
          annotations: []
  - Struct:
      visibility: Export
      annotations: []
      is_packed: false
      name:
        segments:
          - ExportedRect
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: F64
          visibility: Default
          annotations: []
        - name: y
          ty: F64
          visibility: Default
          annotations: []
        - name: w
          ty: F64
          visibility: Default
          annotations: []
        - name: h
          ty: F64
          visibility: Default
          annotations: []
  - Struct:
      visibility: Private
      annotations: []
      is_packed: false
      name:
        segments:
          - PrivateNode
      generic_params: []
      requires: []
      fields:
        - name: data
          ty: I32
          visibility: Default
          annotations: []
        - name: next
          ty:
            Nullable:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - PrivateNode
                    generic_args: []
          visibility: Default
          annotations: []
